tests/ui/impl-trait/issues/issue-86800.stderr
error: item does not constrain `TransactionFuture::{opaque#0}`, but has it in its signature
  --> $DIR/issue-86800.rs:41:18
   |
LL |         async fn do_transaction<O>(
   |                  ^^^^^^^^^^^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/issue-86800.rs:38:42
   |
LL |     pub type TransactionFuture<'__, O> = impl '__ + Future<Output = TransactionResult<O>>;
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the compiler unexpectedly panicked. this is a bug.

query stack during panic:
#0 [type_of_opaque] computing type of opaque `foo::TransactionFuture::{opaque#0}`
#1 [type_of] computing type of `foo::TransactionFuture::{opaque#0}`
end of query stack
